Fix text wrapping on mobile screen

--- a/Client/src/components/WarehouseCard/WarehouseCard.scss
+++ b/Client/src/components/WarehouseCard/WarehouseCard.scss
@@ -46,16 +46,13 @@ $column-width: 50%;
 
   &__text-container {
     @extend .inventory__text-container;
-    width: $column-width;
+    @include tablet {
+      width: $column-width;
+    }
   }
 
   &__index {
     @extend .inventory__item-name;
   }
 
-  &__address,
-  &__contact-info,
-  &__contact-name {
-    width: $column-width;
-  }
 }
